--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "devDependencies": {
-    "gulp": "latest",
+    "gulp": "^3.9.1",
     "gulp-minify-css": "latest",
+    "gulp-notify": "latest",
+    "gulp-plumber": "latest",
     "gulp-sass": "latest",
     "gulp-slim": "^0.3.0",
-    "gulp-uglify": "latest",
-    "gulp-plumber": "latest",
-    "gulp-notify": "latest"
+    "gulp-uglify": "latest"
   }
 }
